--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "electron-store": "^8.1.0",
     "eslint-config-next": "13",
     "react-arborist": "^3.4.0",
+    "react-contexify": "^6.0.0",
     "react-icons": "^5.0.1",
     "react-split-pane": "^0.1.92",
     "react-spring": "^9.7.3",
